# window

./: CMakeLists.txt  README.MD  vkpinit.sh
include/: array.h  bin_tree.h  list.h
include/internal/: glfw_callbacks.h  glfw_input.h  glfw_monitor.h  glfw_window.h
include/window/: action.h  iflags.h  keys.h  mouse.h  window.h
src/: main.c  window.c
src/window/: events.c  kb_input.c  keyboard_input.c  monitor.c  mouse_input.c  unicode_input.c  vsync.c  window.c  window_bar.c
